fixed dark mode, and username system

--- a/pages/styles/global.css
+++ b/pages/styles/global.css
@@ -10,10 +10,10 @@
       @apply block drop-shadow-md bg-white hover:drop-shadow-md transition py-2 rounded pr-4 pl-4 w-24 text-center text-blue-700;
     }
     .button {
-      @apply w-full bg-gray-50  text-gray-900  dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:hover:bg-white dark:hover:text-gray-900 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center drop-shadow-xl hover:drop-shadow-lg transition
+      @apply w-full bg-gray-50  text-gray-900 focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center drop-shadow-xl hover:drop-shadow-lg transition
     }
     .input-box{
-      @apply bg-gray-50 shadow-inner border-gray-300 text-gray-900 sm:text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white  dark:focus:border-blue-500
+      @apply bg-gray-50 shadow-inner border-gray-300 text-gray-900 sm:text-sm rounded-lg block w-full p-2.5
     }
 }
 
